Archive2/be/98f022e534d992/output
main.cpp: In function 'int main()':
main.cpp:15:41: error: no matching function for call to 'map_contains(std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&, const char [6])'
     std::cout << map_contains(M, "hello");
                                         ^
main.cpp:7:13: note: candidate: template<class Key, class Value> bool map_contains(std::map<Key, Value>, const Key&)
 inline bool map_contains(const std::map< Key, Value > m, const Key& k)
             ^
main.cpp:7:13: note:   template argument deduction/substitution failed:
main.cpp:15:41: note:   deduced conflicting types for parameter 'const Key' ('std::__cxx11::basic_string<char>' and 'char [6]')
     std::cout << map_contains(M, "hello");
                                         ^
